# ZKKYC-CONCORDIUM

./: .gitignore  Cargo.toml  check_nullifier.json  check_nullifier_demo.json  check_subject.json  gitignore  init.json  is_verified.json  nullifier_used_param.json  readme.md  register.json  revoke.json  rpc.txt  test-commands.md  use_nullifier.json  zk_kyc_registry.wasm.v1  zk_kyc_registry_v2.wasm.v1
schema-json/: zk_kyc_registry_schema.json
src/: lib.rs
zk-kyc-agent/: agent.py  requirements.txt  tl;dr.md
